# turn-of-events

./: .gitignore  README.md  docker-compose.yml
EventService/: README.md  pom.xml
api-gateway/: .gitignore  Dockerfile  README.md  pom.xml
event-service/: Dockerfile  README.md  build.gradle  settings.gradle
frontend/: Dockerfile  index.html  mainpage.html  package-lock.json  package.json  styles.css
initdb/: init.sql
kubernetes/: api-gateway-deployment.yml  api-gateway-hpa.yaml  api-gateway-service.yml  cronJob.yml  deployment.yml  elasticsearch-deployment.yml  event-service-deployment.yml  event-service-service.yaml  event-service-service.yml  frontend-deployment.yml  frontend-hpa.yaml  frontend-service.yml  init-multiple-dbs.sql  kafka-1-deployment.yml  kafka-1-service.yml  kafka-2-deployment.yml  kafka-2-service.yml  kafka-deployment.yml  kafka-service.yml  kibana-deployment.yml  kibana-service.yml  mongodb-deployment.yml  nginx-conf-d.yml  nginx-config.yml  nginx-deployment.yml  nginx-hpa.yaml  nginx-service.yml  org-frontend-deployment.yml  org-frontend-service.yml  organizer-frontend-deployment.yml  organizer-frontend-hpa.yaml  organizer-frontend-service.yml  parser-service-configmap.yaml  parser-service-deployment.yaml  parser-service-deployment.yml  parser-service-hpa.yaml  parser-service-service.yaml  parser-service-service.yml  postgres-deployment.yml  postgres-init-configmap.yml  (+13 more)
media-service/: Dockerfile  go.mod  go.sum  main.go
nginx/: nginx.conf
organizer-frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
parser-service/: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  database.py  drama_parser.py  go.mod  go.sum  main.go  main.py  (+6 more)
rate-calculator/: CMakeLists.txt  Dockerfile  main.cpp
(+191 files in other folders)
